tests/__snapshots__/validation-toRaiseError.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toRaiseError: stderr 1`] = `
"Error: An argument for 'source' or type argument for 'Source' must be provided.

  3 | describe("argument for 'source'", () => {
  4 |   test("must be provided", () => {
> 5 |     expect().type.toRaiseError("one");
    |     ^
  6 |   });
  7 | });
  8 | 

      at ./__typetests__/toRaiseError.tst.ts:5:5

Error: An argument for 'target' must be of type 'string | number', received: 'true'.

  20 | 
  21 |       // @ts-expect-error test
> 22 |     ).type.toRaiseError(true, [2345]);
     |                         ^
  23 |   });
  24 | });
  25 | 

       at ./__typetests__/toRaiseError.tst.ts:22:25

Error: An argument for 'target' must be of type 'string | number', received: 'number[]'.

  20 | 
  21 |       // @ts-expect-error test
> 22 |     ).type.toRaiseError(true, [2345]);
     |                               ^
  23 |   });
  24 | });
  25 | 

       at ./__typetests__/toRaiseError.tst.ts:22:31

"
`;

exports[`toRaiseError: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toRaiseError.tst.ts
  argument for 'source'
    × must be provided
  argument for 'target'
    × must be of type 'string | number'

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
